@@ -1,4 +1,10 @@
 ==================================
+Rilascio v2.0.22    del 16/07/2017
+==================================
+
+ryText: corretto errore nella timerize.
+
+==================================
 Rilascio v2.0.21    del 16/07/2017
 ==================================
 
